--- a/package.json
+++ b/package.json
@@ -35,7 +35,23 @@
         "language": "facture",
         "path": "./snippets/facture-snippets.json"
       }
-    ]
+    ],
+    "commands": [
+      {
+        "command": "facturePreview.start",
+        "title": "Facture Preview",
+        "category": "Facture"
+      }
+    ],
+    "menus": {
+      "editor/title": [
+        {
+          "when": "resourceLangId == facture",
+          "command": "facturePreview.start",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "activationEvents": [
     "onLanguage:facture"
@@ -55,7 +71,8 @@
     "watch": "tsc -b tsconfig.json --watch",
     "lint": "eslint src --ext ts",
     "langium:generate": "langium generate",
-    "langium:watch": "langium generate --watch"
+    "langium:watch": "langium generate --watch",
+    "test": "mocha"
   },
   "dependencies": {
     "chalk": "^4.1.2",
@@ -69,14 +86,21 @@
     "vscode-uri": "^3.0.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/circular-json": "^0.4.0",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^14.17.3",
+    "@types/sinon": "^10.0.13",
     "@types/vscode": "^1.56.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "chai": "^4.3.7",
     "eslint": "^8.17.0",
     "langium-cli": "~1.0.0",
     "lit-html": "^2.6.1",
+    "mocha": "^10.2.0",
+    "sinon": "^15.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
