added facture-validator for properties of interface

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "request": "launch",
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}"
-            ]
+            ],
+            "autoAttachChildProcesses": true,
         },
         {
             "name": "Attach to Language Server",
