--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
     "chevrotain": "^10.4.1",
     "circular-json": "^0.5.9",
     "commander": "^8.0.0",
+    "fs-extra": "^11.1.0",
     "langium": "~1.0.0",
+    "lit-html": "^2.6.1",
     "react": "^18.2.0",
     "vscode-languageclient": "^8.0.2",
     "vscode-languageserver": "^8.0.2",
@@ -88,6 +90,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/circular-json": "^0.4.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "^14.17.3",
     "@types/sinon": "^10.0.13",
@@ -97,7 +100,6 @@
     "chai": "^4.3.7",
     "eslint": "^8.17.0",
     "langium-cli": "~1.0.0",
-    "lit-html": "^2.6.1",
     "mocha": "^10.2.0",
     "sinon": "^15.0.1",
     "ts-node": "^10.9.1",
