--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "lint": "eslint src --ext ts",
     "langium:generate": "langium generate",
     "langium:watch": "langium generate --watch",
-    "test": "mocha"
+    "test": "mocha --inline-diffs",
+    "test:watch": "mocha --inline-diffs -- --watch"
   },
   "dependencies": {
     "chalk": "^4.1.2",
