--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "fs-extra": "^11.1.0",
     "langium": "~1.0.0",
     "lit-html": "^2.6.1",
+    "mock-utils": "^0.0.16",
     "react": "^18.2.0",
     "vscode-languageclient": "^8.0.2",
     "vscode-languageserver": "^8.0.2",
